src/test/ui/issues/issue-66706.stderr
error: expected `,`, found `&`
  --> $DIR/issue-66706.rs:2:16
   |
LL |     [0; [|_: _ &_| ()].len()]
   |               -^ expected `,`
   |               |
   |               help: missing `,`

error: expected identifier, found reserved identifier `_`
  --> $DIR/issue-66706.rs:8:20
   |
LL |     [0; [|f @ &ref _| {} ; 0 ].len() ];
   |                    ^ expected identifier, found reserved identifier

error: expected `,`, found `&`
  --> $DIR/issue-66706.rs:13:17
   |
LL |     [0; [|&_: _ &_| {}; 0 ].len()]
   |                -^ expected `,`
   |                |
   |                help: missing `,`

error: expected identifier, found reserved identifier `_`
  --> $DIR/issue-66706.rs:19:26
   |
LL |     [0; match [|f @ &ref _| () ] {} ]
   |                          ^ expected identifier, found reserved identifier

error[E0308]: mismatched types
  --> $DIR/issue-66706.rs:2:5
   |
LL | fn a() {
   |        - help: try adding a return type: `-> [{integer}; _]`
LL |     [0; [|_: _ &_| ()].len()]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found array `[{integer}; _]`

error[E0308]: mismatched types
  --> $DIR/issue-66706.rs:13:5
   |
LL | fn c() {
   |        - help: try adding a return type: `-> [{integer}; _]`
LL |     [0; [|&_: _ &_| {}; 0 ].len()]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found array `[{integer}; _]`

error[E0308]: mismatched types
  --> $DIR/issue-66706.rs:19:5
   |
LL | fn d() {
   |        - help: try adding a return type: `-> [{integer}; _]`
LL |     [0; match [|f @ &ref _| () ] {} ]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found array `[{integer}; _]`

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0308`.
